--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
-fastapi['standard']==0.115.12
-fastapi-cli==0.0.7
+fastapi==0.115.2
+uvicorn[standard]==0.29.0
 sqlmodel==0.0.24
+mysql-connector-python==9.3.0
