--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,5 @@
-annotated-types==0.7.0
-anyio==4.9.0
-certifi==2025.6.15
-click==8.2.1
-dnspython==2.7.0
-email_validator==2.2.0
-fastapi==0.115.12
-fastapi-cli==0.0.7
-h11==0.16.0
-httpcore==1.0.9
-httptools==0.6.4
-httpx==0.28.1
-idna==3.10
-Jinja2==3.1.6
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-mdurl==0.1.2
+fastapi[standard]==0.115.12
+sqlmodel==0.0.24
 mysql-connector-python==9.3.0
+uvicorn==0.34.3
+python-dotenv==1.1.0
